--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.btn-group > *, #navbar .navContainer .btn-login {
+.jumbotron .btn-group > *, #navbar .navContainer .btn-login {
   color: white;
   padding: 6px 24px;
   border: 1px solid #c584f3;
@@ -8,9 +8,22 @@
   font-weight: bold;
 }
 
-.btn-group > button:active, #navbar .navContainer .btn-login:active {
+.jumbotron .btn-group > button:active, #navbar .navContainer .btn-login:active {
   position: relative;
   top: 2px;
+}
+
+.container .leaderboard th,
+.container .leaderboard td {
+  border-bottom: 1px solid #633a70;
+}
+
+.container .privateRoom, .container .guestRoom, .container .leaderboard {
+  border: 1px solid rgba(160, 94, 177, 0.2);
+  border-radius: 0.3rem;
+  background-color: #a05eb1;
+  color: white;
+  min-height: 220px;
 }
 
 body {
@@ -20,12 +33,18 @@ body {
   padding: 0;
 }
 
+i {
+  margin-right: 8px;
+}
+
 #navbar {
   height: 50px;
   background-color: #a05eb1;
   display: flex;
   align-items: center;
   justify-content: space-around;
+  position: sticky;
+  top: 0;
 }
 #navbar .navContainer {
   width: 800px;
@@ -54,86 +73,72 @@ body {
   background-color: rgba(160, 94, 177, 0.2);
   border: 1px solid #a05eb1;
 }
-
-h1 {
-  color: #298939;
-  margin: 0;
-}
-
-.player-on {
+.jumbotron .player-on {
   color: #633a71;
   margin: 0;
 }
-
-.btn-group {
+.jumbotron .btn-group {
   width: 600px;
 }
-.btn-group > button:focus {
+.jumbotron .btn-group > button:focus {
   outline: 0;
 }
-.btn-group .btn-register {
+.jumbotron .btn-group .btn-register {
   background-color: #f0a30c;
 }
-.btn-group .btn-register:hover {
+.jumbotron .btn-group .btn-register:hover {
   background-color: #f0a30c;
   background: linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffab23", endColorstr="#ffec64",GradientType=0);
   background-color: #ffab23;
 }
-.btn-group .btn-guest {
+.jumbotron .btn-group .btn-guest {
   background-color: #53af50;
 }
-.btn-group .btn-guest:hover {
+.jumbotron .btn-group .btn-guest:hover {
   background: linear-gradient(to bottom, #68a54b 5%, #acfbac 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#68a54b", endColorstr="#acfbac",GradientType=0);
   background-color: #68a54b;
 }
-.btn-group .btn-createRoom {
+.jumbotron .btn-group .btn-createRoom {
   background-color: #633a71;
 }
-.btn-group .btn-createRoom:hover {
+.jumbotron .btn-group .btn-createRoom:hover {
   background: linear-gradient(to bottom, #a20dbd 5%, #c123de 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#a20dbd", endColorstr="#c123de",GradientType=0);
   background-color: #a20dbd;
 }
 
+.container {
+  width: 830px;
+}
+.container .panel-heading {
+  background-color: #633a71;
+  color: white;
+  height: 30px;
+  font-size: 20px;
+  padding: 20px 24px;
+}
+.container .guestRoom {
+  margin-bottom: 30px;
+}
 footer {
   background-color: rgba(160, 94, 177, 0.2);
   height: 50px;
 }
-
-.footerContainer {
+footer .footerContainer {
   width: 800px;
 }
-
-.copyright {
+footer .footerContainer .copyright {
   margin: 0;
   color: #a05eb1;
 }
-
-a {
-  text-decoration: none;
-  color: #a05eb1;
-}
-
-.links {
+footer .footerContainer .links {
   width: 300px;
 }
-
-.container {
-  width: 800px;
-}
-
-.row {
-  border: 3px dotted green;
-}
-
-.col-md-6 {
-  border: 1px solid red;
-}
-
-#leaderboard {
-  display: grid;
+footer .footerContainer .links a {
+  text-decoration: none;
+  color: #a05eb1;
 }
 
 /*# sourceMappingURL=main.css.map */
