--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,11 +20,30 @@ $bg-body-color: #f6f6f6;
   top: 2px;
 }
 
+%table-b-border {
+  th,
+  td {
+    border-bottom: 1px solid #633a70;
+  }
+}
+
+%purple-bg-border {
+  border: 1px solid rgba(160, 94, 177, 0.2);
+  border-radius: 0.3rem;
+  background-color: #a05eb1;
+  color: white;
+  min-height: 220px;
+}
+
 body {
   background-color: $bg-body-color;
   font-family: "Merienda One", cursive;
   margin: 0;
   padding: 0;
+}
+
+i {
+  margin-right: 8px;
 }
 
 // ANCHOR navbar
@@ -34,6 +53,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  position: sticky;
+  top: 0;
 
   .navContainer {
     width: 800px;
@@ -72,56 +93,75 @@ body {
   margin: 30px auto;
   background-color: rgba(160, 94, 177, 0.2);
   border: 1px solid $primary-color;
-}
-
-h1 {
-  color: #298939;
-  margin: 0;
-}
-
-.player-on {
-  color: #633a71;
-  margin: 0;
-}
-
-.btn-group {
-  width: 600px;
-  > * {
-    @extend %btn-style;
+  .player-on {
+    color: #633a71;
+    margin: 0;
   }
+  .btn-group {
+    width: 600px;
+    > * {
+      @extend %btn-style;
+    }
 
-  > button:active {
-    @extend %btn-move;
-  }
-  > button:focus {
-    outline: 0;
-  }
-  .btn-register {
-    background-color: #f0a30c;
-    &:hover {
+    > button:active {
+      @extend %btn-move;
+    }
+    > button:focus {
+      outline: 0;
+    }
+    .btn-register {
       background-color: #f0a30c;
-      background: linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
-      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffab23', endColorstr='#ffec64',GradientType=0);
-      background-color: #ffab23;
+      &:hover {
+        background-color: #f0a30c;
+        background: linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffab23', endColorstr='#ffec64',GradientType=0);
+        background-color: #ffab23;
+      }
+    }
+
+    .btn-guest {
+      background-color: #53af50;
+      &:hover {
+        background: linear-gradient(to bottom, #68a54b 5%, #acfbac 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#68a54b', endColorstr='#acfbac',GradientType=0);
+        background-color: #68a54b;
+      }
+    }
+
+    .btn-createRoom {
+      background-color: #633a71;
+      &:hover {
+        background: linear-gradient(to bottom, #a20dbd 5%, #c123de 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a20dbd', endColorstr='#c123de',GradientType=0);
+        background-color: #a20dbd;
+      }
     }
   }
+}
 
-  .btn-guest {
-    background-color: #53af50;
-    &:hover {
-      background: linear-gradient(to bottom, #68a54b 5%, #acfbac 100%);
-      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#68a54b', endColorstr='#acfbac',GradientType=0);
-      background-color: #68a54b;
-    }
+// ANCHOR container with leaderboard,guestroom & private room
+
+.container {
+  width: 830px;
+  .panel-heading {
+    background-color: $secondary-color;
+    color: white;
+    height: 30px;
+    font-size: 20px;
+    padding: 20px 24px;
+  }
+  .leaderboard {
+    @extend %purple-bg-border;
+    @extend %table-b-border;
   }
 
-  .btn-createRoom {
-    background-color: #633a71;
-    &:hover {
-      background: linear-gradient(to bottom, #a20dbd 5%, #c123de 100%);
-      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a20dbd', endColorstr='#c123de',GradientType=0);
-      background-color: #a20dbd;
-    }
+  .guestRoom {
+    @extend %purple-bg-border;
+    margin-bottom: 30px;
+  }
+
+  .privateRoom {
+    @extend %purple-bg-border;
   }
 }
 
@@ -129,42 +169,18 @@ h1 {
 footer {
   background-color: rgba(160, 94, 177, 0.2);
   height: 50px;
-}
-
-.footerContainer {
-  width: 800px;
-}
-
-.copyright {
-  margin: 0;
-  color: $primary-color;
-}
-
-a {
-  text-decoration: none;
-  color: $primary-color;
-}
-
-.links {
-  width: 300px;
-}
-
-.container {
-  // border: 1px solid blue;
-  width: 800px;
- 
-
-}
-
-.row {
-  border: 3px dotted green;
-}
-
-.col-md-6 {
-  border: 1px solid red;
-}
-
-#leaderboard {
- display:grid;
- 
+  .footerContainer {
+    width: 800px;
+    .copyright {
+      margin: 0;
+      color: $primary-color;
+    }
+    .links {
+      width: 300px;
+      a {
+        text-decoration: none;
+        color: $primary-color;
+      }
+    }
+  }
 }
