--- a/css/main.css
+++ b/css/main.css
@@ -15,15 +15,14 @@
 
 .container .leaderboard th,
 .container .leaderboard td {
-  border-bottom: 1px solid #633a70;
+  border-bottom: 1px solid #633a71;
 }
 
-.container .privateRoom, .container .guestRoom, .container .leaderboard {
+.container .private-rooms, .container .guest-rooms, .container .leaderboard {
   border: 1px solid rgba(160, 94, 177, 0.2);
   border-radius: 0.3rem;
   background-color: #a05eb1;
   color: white;
-  min-height: 220px;
 }
 
 body {
@@ -31,10 +30,6 @@ body {
   font-family: "Merienda One", cursive;
   margin: 0;
   padding: 0;
-}
-
-i {
-  margin-right: 8px;
 }
 
 #navbar {
@@ -45,6 +40,7 @@ i {
   justify-content: space-around;
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 #navbar .navContainer {
   width: 800px;
@@ -68,7 +64,7 @@ i {
 }
 .jumbotron {
   width: 800px;
-  height: 200px;
+  height: 220px;
   margin: 30px auto;
   background-color: rgba(160, 94, 177, 0.2);
   border: 1px solid #a05eb1;
@@ -119,9 +115,27 @@ i {
   font-size: 20px;
   padding: 20px 24px;
 }
-.container .guestRoom {
-  margin-bottom: 30px;
+.container .leaderboard {
+  min-height: 470px;
 }
+.container .guest-rooms {
+  margin-bottom: 30px;
+  min-height: 220px;
+}
+.container .private-rooms {
+  min-height: 220px;
+}
+.container .status-rounds {
+  font-size: 12px;
+  color: #633a71;
+  font-weight: bold;
+}
+.container .player-count {
+  font-size: 12px;
+  color: #633a71;
+  font-weight: bold;
+}
+
 footer {
   background-color: rgba(160, 94, 177, 0.2);
   height: 50px;
@@ -131,14 +145,14 @@ footer .footerContainer {
 }
 footer .footerContainer .copyright {
   margin: 0;
-  color: #a05eb1;
+  color: #633a71;
 }
 footer .footerContainer .links {
   width: 300px;
 }
 footer .footerContainer .links a {
   text-decoration: none;
-  color: #a05eb1;
+  color: #633a71;
 }
 
 /*# sourceMappingURL=main.css.map */
