--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,16 +23,15 @@ $bg-body-color: #f6f6f6;
 %table-b-border {
   th,
   td {
-    border-bottom: 1px solid #633a70;
+    border-bottom: 1px solid $secondary-color;
   }
 }
 
 %purple-bg-border {
   border: 1px solid rgba(160, 94, 177, 0.2);
   border-radius: 0.3rem;
-  background-color: #a05eb1;
+  background-color: $primary-color;
   color: white;
-  min-height: 220px;
 }
 
 body {
@@ -40,10 +39,6 @@ body {
   font-family: "Merienda One", cursive;
   margin: 0;
   padding: 0;
-}
-
-i {
-  margin-right: 8px;
 }
 
 // ANCHOR navbar
@@ -55,6 +50,7 @@ i {
   justify-content: space-around;
   position: sticky;
   top: 0;
+  z-index: 1;
 
   .navContainer {
     width: 800px;
@@ -89,12 +85,12 @@ i {
 // ANCHOR Jumbotron
 .jumbotron {
   width: 800px;
-  height: 200px;
+  height: 220px;
   margin: 30px auto;
   background-color: rgba(160, 94, 177, 0.2);
   border: 1px solid $primary-color;
   .player-on {
-    color: #633a71;
+    color: $secondary-color;
     margin: 0;
   }
   .btn-group {
@@ -143,6 +139,7 @@ i {
 
 .container {
   width: 830px;
+
   .panel-heading {
     background-color: $secondary-color;
     color: white;
@@ -153,15 +150,30 @@ i {
   .leaderboard {
     @extend %purple-bg-border;
     @extend %table-b-border;
+    min-height: 470px;
   }
 
-  .guestRoom {
+  .guest-rooms {
     @extend %purple-bg-border;
     margin-bottom: 30px;
+    min-height: 220px;
   }
 
-  .privateRoom {
+  .private-rooms {
     @extend %purple-bg-border;
+    min-height: 220px;
+  }
+
+  .status-rounds {
+    font-size: 12px;
+    color: $secondary-color;
+    font-weight: bold;
+  }
+
+  .player-count {
+    font-size: 12px;
+    color: $secondary-color;
+    font-weight: bold;
   }
 }
 
@@ -169,17 +181,18 @@ i {
 footer {
   background-color: rgba(160, 94, 177, 0.2);
   height: 50px;
+
   .footerContainer {
     width: 800px;
     .copyright {
       margin: 0;
-      color: $primary-color;
+      color: $secondary-color;
     }
     .links {
       width: 300px;
       a {
         text-decoration: none;
-        color: $primary-color;
+        color: $secondary-color;
       }
     }
   }
