--- a/gamepage.css
+++ b/gamepage.css
@@ -1,9 +1,171 @@
-.overallContainer {
+body {
+  /* background-color: rgba(160, 94, 177, 0.2); */
+  background-color: #f6f6f6;
+  font-family: "Merienda One", cursive;
   margin: 0;
   padding: 0;
-  position: absolute;
-  width: 745px;
-  height: 593px;
-  background: rgba(160, 94, 177, 0.2);
+  display: grid;
+  align-content: center;
+  justify-content: center;
 }
 
+/* navbar with login btn & speaker */
+#navbar {
+  height: 50px;
+  background-color: #a05eb1;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border: 5px solid rgba(160, 94, 177, 0.2);
+}
+
+.navContainer,
+.footerContainer {
+  width: 800px;
+}
+
+.btn-login {
+  background-color: #633a71;
+  color: white;
+  border: 1px solid #c584f3;
+  padding: 6px 24px;
+  border-radius: 5px;
+  text-decoration: none;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.btn-login:hover {
+  background: linear-gradient(to bottom, #bc80ea 5%, #dfbdfa 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#bc80ea', endColorstr='#dfbdfa',GradientType=0);
+  background-color: #bc80ea;
+}
+
+#speaker {
+  color: #633a71;
+  cursor: pointer;
+}
+
+#speaker:hover {
+  color: linear-gradient(to bottom, #bc80ea 5%, #dfbdfa 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#bc80ea', endColorstr='#dfbdfa',GradientType=0);
+  color: #bc80ea;
+}
+
+/* jumbotron*/
+.headerDraw {
+  text-align: center;
+  width: 800px;
+  height:100px;
+  margin: auto;
+  background-color: rgba(160, 94, 177, 0.2);
+  border: 1px solid #a05eb1;
+  border-radius: 5px;
+}
+
+.avatarPicture {
+  margin: 0;
+  width: 50px;
+  height: 60px;
+  border: 2px solid rgba(160, 94, 177, 0.2);
+  border-radius: 5px;
+}
+
+canvas {
+  margin: 0;
+  width: 600px;
+  height: 400px;
+  border: 2px solid rgba(160, 94, 177, 0.2);
+  border-radius: 5px;
+}
+
+  
+/*
+.btn-group {
+  width: 600px;
+}
+
+.btn-group > * {
+  color: white;
+  border: 1px solid #c584f3;
+  padding: 6px 24px;
+  border-radius: 5px;
+  text-decoration: none;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.btn-register {
+  background-color: #f0a30c;
+}
+.btn-register:hover {
+  background-color: #f0a30c;
+  background: linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffab23', endColorstr='#ffec64',GradientType=0);
+  background-color: #ffab23;
+}
+
+.btn-guest {
+  background-color: #53af50;
+}
+
+.btn-guest:hover {
+  background: linear-gradient(to bottom, #68a54b 5%, #acfbac 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#68a54b', endColorstr='#acfbac',GradientType=0);
+  background-color: #68a54b;
+}
+
+.btn-createRoom {
+  background-color: #633a71;
+}
+
+.btn-createRoom:hover {
+  background: linear-gradient(to bottom, #a20dbd 5%, #c123de 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a20dbd', endColorstr='#c123de',GradientType=0);
+  background-color: #a20dbd;
+}
+
+.btn-login:active,
+.btn-register:active,
+.btn-guest:active,
+.btn-createRoom:active {
+  position: relative;
+  top: 2px;
+}
+
+.btn-login:focus,
+.btn-register:focus,
+.btn-guest:focus,
+.btn-createRoom:focus {
+  outline: 0;
+}*/
+
+.headerCanvas {
+  
+}
+
+
+/* footer */
+footer {
+  background-color: rgba(160, 94, 177, 0.2);
+  height: 50px;
+}
+
+.copyright {
+  margin: 0;
+  color: #a05eb1;
+}
+
+span {
+  color: #298939;
+  font-weight: 200;
+}
+
+a {
+  text-decoration: none;
+  color: #a05eb1;
+}
+
+.links {
+  width: 300px;
+}
